# vdb-mcp

./: Dockerfile  LICENSE  README.md  pyproject.toml  server.json  smithery.yaml
vdb_mcp/: __init__.py  server.py
