[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vdb-mcp"
version = "0.1.2"
description = "MCP server for VDB — AI-aware vulnerability database (packages, MCP servers, models). Check packages for CVEs and slopsquatting before installing."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Elastic-2.0" }
authors = [{ name = "VDB", email = "dev@egdee.com" }]
keywords = [
    "mcp", "model-context-protocol", "security", "vulnerability",
    "sbom", "slopsquatting", "supply-chain", "cve", "osv",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    # `mcp` pulls starlette/uvicorn needed by the optional SSE mode.
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://vdb.ai.kr"
Documentation = "https://vdb.ai.kr/connect"
Repository = "https://github.com/0pstech/vdb-mcp"

[project.scripts]
vdb-mcp = "vdb_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["vdb_mcp"]
